--- a/王楠/MyWebProject/index.html
+++ b/王楠/MyWebProject/index.html
@@ -6,8 +6,18 @@
           content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>这是我的第一个页面</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/layui/css/layui.css">
+    <link rel="stylesheet" href="css/vcode.css">
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/layui/layui.all.js"></script>
+    <script type="text/javascript" src="js/vcode.js"></script>
+    <script type="text/javascript">
+        /*jquery启动函数*/
+        $(function () {
+            createCode(4)
+        })
+    </script>
 </head>
 <body>
 <div class="navbar-fixed-top navbar navbar-inverse"
@@ -40,7 +50,8 @@
                         <br>
                         <div class="input-group">
                             <label class="input-group-addon">验证码</label>
-                            <input type="text" placeholder="请输入验证码" class="form-control ">
+                            <input type="text" placeholder="请输入验证码" class="form-control " style="display: inline;width:60%">
+                            <a href="javascript:void(0)" onclick="createCode(4)"><span id="vcode"></span></a>
                         </div>
                         <br>
                         <div align="right"><a href=""> 忘记密码</a></div>
